--- a/src/GUI/fThongBaoChuan.form
+++ b/src/GUI/fThongBaoChuan.form
@@ -111,7 +111,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="jLabel3" pref="960" max="32767" attributes="0"/>
+                              <Component id="jLabel3" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                           </Group>
                           <Component id="jTabbedPane1" max="32767" attributes="0"/>
