--- a/src/GUI/fKiemKe.form
+++ b/src/GUI/fKiemKe.form
@@ -189,7 +189,7 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
-                        <Column maxWidth="500" minWidth="500" prefWidth="500" resizable="true">
+                        <Column maxWidth="470" minWidth="470" prefWidth="470" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -450,7 +450,11 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="14" style="0"/>
                     </Property>
+                    <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField_id_khoActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JSeparator" name="jSeparator1">
                 </Component>
@@ -495,6 +499,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Tahoma" size="14" style="0"/>
                     </Property>
+                    <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                 </Component>
               </SubComponents>
